tests/invalid/DefiniteAssign_Invalid_1.whiley
function g(int x) :
    return

function f(int x, int y) -> int
requires (x >= 0) && (y > 0):
    g(z)
